--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@heroui/react": "^2.7.6",
     "framer-motion": "^12.7.1",
     "next": "15.3.0",
-    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -22,9 +21,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
-    "tailwindcss": "^4.1.3",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
