--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroui/react": "^2.7.6",
     "code": "^5.2.4",
     "framer-motion": "^12.7.1",
+    "howler": "^2.2.4",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.3",
+    "@types/howler": "^2.2.12",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
